add comments and google_search

--- a/themes/jacman/layout/_partial/search.ejs
+++ b/themes/jacman/layout/_partial/search.ejs
@@ -3,6 +3,7 @@
   <div id='cse' style='width:100%;text-align:center'>正在加载搜索结果，请稍等。</div>
 </div>
 <script src="http://www.google.com.hk/jsapi" type="text/javascript"></script>
+
 <script type="text/javascript">
 google.load('search', '1', {language : 'zh-CN',style: google.loader.themes.MINIMALIST});
 google.setOnLoadCallback(function(){
@@ -18,4 +19,17 @@ google.setOnLoadCallback(function(){
   }
 },true);
 </script>
+<!--
+<script>
+  (function() {
+    var cx = '000981288436307906044:jcmg6xaswca';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>-->
 <% } %>
