--- a/themes/jacman/layout/_partial/post/footer.ejs
+++ b/themes/jacman/layout/_partial/post/footer.ejs
@@ -19,7 +19,20 @@
 		<a href="<%- config.root %><%- item.path %>#disqus_thread" class="comments-count-link">Comments</a>
 	<% } else if(theme.duoshuo_shortname) { %>
 	  	<span></span>
-		<a href="<%- config.root %><%- item.path %>#comments" class="ds-thread-count comments-count-link" data-thread-key="<%- item.path %>" data-count-type="comments">&nbsp;</a>
+		<a href="<%- config.root %><%- item.path %>#comments" class="ds-thread-count comments-count-link" data-thread-key="<%- item.path %>" data-count-type="comments">
+			<!-- 多说js加载开始，一个页面只需要加载一次 -->
+			<script type="text/javascript">
+			var duoshuoQuery = {short_name:"hzc199307"};
+			(function() {
+				var ds = document.createElement('script');
+				ds.type = 'text/javascript';ds.async = true;
+				ds.src = 'http://static.duoshuo.com/embed.js';
+				ds.charset = 'UTF-8';
+				(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds);
+			})();
+			</script>
+			<!-- 多说js加载结束，一个页面只需要加载一次 -->
+		</a>
 	<% } %>
 </div>
 <% } %>
