add copyright and modify include_code.js

--- a/themes/jacman/source/css/_partial/aside.styl
+++ b/themes/jacman/source/css/_partial/aside.styl
@@ -99,9 +99,9 @@
     font-size 0.8em
     color color-meta
     &:before
-      content '('
+      content '〔'
     &:after
-      content ')'
+      content '〕'
   ul, ol, dl
     margin-left 20px
     li:before
